fixed contrast issue

--- a/wdd230/lesson06/css/medium.css
+++ b/wdd230/lesson06/css/medium.css
@@ -55,7 +55,7 @@
 
   table th {
     background-color: var(--yellow-color);
-    color: var(--white-color);
+    color: var(--dark-color);
   }
 
   table img {
